--- a/Project/views/user/whislist.ejs
+++ b/Project/views/user/whislist.ejs
@@ -1,232 +1,266 @@
-
-
 <style>
     .cart-wrap {
-	padding: 40px 0;
-	font-family: 'Open Sans', sans-serif;
-}
-.main-heading {
-	font-size: 19px;
-	margin-bottom: 20px;
-}
-.table-wishlist table {
-    width: 100%;
-}
-.table-wishlist thead {
-    border-bottom: 1px solid #e5e5e5;
-    margin-bottom: 5px;
-}
-.table-wishlist thead tr th {
-    padding: 8px 0 18px;
-    color: #484848;
-    font-size: 15px;
-    font-weight: 400;
-}
-.table-wishlist tr td {
-    padding: 25px 0;
-    vertical-align: middle;
-}
-.table-wishlist tr td .img-product {
-    width: 72px;
-    float: left;
-    margin-left: 8px;
-    margin-right: 31px;
-    line-height: 63px;
-}
-.table-wishlist tr td .img-product img {
-	width: 100%;
-}
-.table-wishlist tr td .name-product {
-    font-size: 15px;
-    color: #484848;
-    padding-top: 8px;
-    line-height: 24px;
-    width: 50%;
-}
-.table-wishlist tr td.price {
-    font-weight: 600;
-}
-.table-wishlist tr td .quanlity {
-    position: relative;
-}
+        padding: 40px 0;
+        font-family: 'Open Sans', sans-serif;
+    }
 
-.total {
-	font-size: 24px;
-	font-weight: 600;
-	color: #8660e9;
-}
-.display-flex {
-	display: flex;
-}
-.align-center {
-	align-items: center;
-}
-.round-black-btn {
-	border-radius: 25px;
-    background: #212529;
-    color: #fff;
-    padding: 5px 20px;
-    display: inline-block;
-    border: solid 2px #212529; 
-    transition: all 0.5s ease-in-out 0s;
-    cursor: pointer;
-    font-size: 14px;
-}
-.round-black-btn:hover,
-.round-black-btn:focus {
-	background: transparent;
-	color: #212529;
-	text-decoration: none;
-}
-.mb-10 {
-    margin-bottom: 10px !important;
-}
-.mt-30 {
-    margin-top: 30px !important;
-}
-.d-block {
-    display: block;
-}
-.custom-form label {
-    font-size: 14px;
-    line-height: 14px;
-}
-.pretty.p-default {
-    margin-bottom: 15px;
-}
-.pretty input:checked~.state.p-primary-o label:before, 
-.pretty.p-toggle .state.p-primary-o label:before {
-    border-color: #8660e9;
-}
-.pretty.p-default:not(.p-fill) input:checked~.state.p-primary-o label:after {
-    background-color: #8660e9 !important;
-}
-.main-heading.border-b {
-    border-bottom: solid 1px #ededed;
-    padding-bottom: 15px;
-    margin-bottom: 20px !important;
-}
-.custom-form .pretty .state label {
-    padding-left: 6px;
-}
-.custom-form .pretty .state label:before {
-    top: 1px;
-}
-.custom-form .pretty .state label:after {
-    top: 1px;
-}
-.custom-form .form-control {
-    font-size: 14px;
-    height: 38px;
-}
-.custom-form .form-control:focus {
-    box-shadow: none;
-}
-.custom-form textarea.form-control {
-    height: auto;
-}
-.mt-40 {
-    margin-top: 40px !important; 
-}
-.in-stock-box {
-	background: #ff0000;
-	font-size: 12px;
-	text-align: center;
-	border-radius: 25px;
-	padding: 4px 15px;
-	display: inline-block;  
-    color: #fff;
-}
-.trash-icon {
-    font-size: 20px;
-    color: #212529;
-}
+    .main-heading {
+        font-size: 19px;
+        margin-bottom: 20px;
+    }
+
+    .table-wishlist table {
+        width: 100%;
+    }
+
+    .table-wishlist thead {
+        border-bottom: 1px solid #e5e5e5;
+        margin-bottom: 5px;
+    }
+
+    .table-wishlist thead tr th {
+        padding: 8px 0 18px;
+        color: #484848;
+        font-size: 15px;
+        font-weight: 400;
+    }
+
+    .table-wishlist tr td {
+        padding: 25px 0;
+        vertical-align: middle;
+    }
+
+    .table-wishlist tr td .img-product {
+        width: 72px;
+        float: left;
+        margin-left: 8px;
+        margin-right: 31px;
+        line-height: 63px;
+    }
+
+    .table-wishlist tr td .img-product img {
+        width: 100%;
+    }
+
+    .table-wishlist tr td .name-product {
+        font-size: 15px;
+        color: #484848;
+        padding-top: 8px;
+        line-height: 24px;
+        width: 50%;
+    }
+
+    .table-wishlist tr td.price {
+        font-weight: 600;
+    }
+
+    .table-wishlist tr td .quanlity {
+        position: relative;
+    }
+
+    .total {
+        font-size: 24px;
+        font-weight: 600;
+        color: #8660e9;
+    }
+
+    .display-flex {
+        display: flex;
+    }
+
+    .align-center {
+        align-items: center;
+    }
+
+    .round-black-btn {
+        border-radius: 25px;
+        background: #212529;
+        color: #fff;
+        padding: 5px 20px;
+        display: inline-block;
+        border: solid 2px #212529;
+        transition: all 0.5s ease-in-out 0s;
+        cursor: pointer;
+        font-size: 14px;
+    }
+
+    .round-black-btn:hover,
+    .round-black-btn:focus {
+        background: transparent;
+        color: #212529;
+        text-decoration: none;
+    }
+
+    .mb-10 {
+        margin-bottom: 10px !important;
+    }
+
+    .mt-30 {
+        margin-top: 30px !important;
+    }
+
+    .d-block {
+        display: block;
+    }
+
+    .custom-form label {
+        font-size: 14px;
+        line-height: 14px;
+    }
+
+    .pretty.p-default {
+        margin-bottom: 15px;
+    }
+
+    .pretty input:checked~.state.p-primary-o label:before,
+    .pretty.p-toggle .state.p-primary-o label:before {
+        border-color: #8660e9;
+    }
+
+    .pretty.p-default:not(.p-fill) input:checked~.state.p-primary-o label:after {
+        background-color: #8660e9 !important;
+    }
+
+    .main-heading.border-b {
+        border-bottom: solid 1px #ededed;
+        padding-bottom: 15px;
+        margin-bottom: 20px !important;
+    }
+
+    .custom-form .pretty .state label {
+        padding-left: 6px;
+    }
+
+    .custom-form .pretty .state label:before {
+        top: 1px;
+    }
+
+    .custom-form .pretty .state label:after {
+        top: 1px;
+    }
+
+    .custom-form .form-control {
+        font-size: 14px;
+        height: 38px;
+    }
+
+    .custom-form .form-control:focus {
+        box-shadow: none;
+    }
+
+    .custom-form textarea.form-control {
+        height: auto;
+    }
+
+    .mt-40 {
+        margin-top: 40px !important;
+    }
+
+    .in-stock-box {
+        background: #ff0000;
+        font-size: 12px;
+        text-align: center;
+        border-radius: 25px;
+        padding: 4px 15px;
+        display: inline-block;
+        color: #fff;
+    }
+
+    .trash-icon {
+        font-size: 20px;
+        color: #212529;
+    }
 </style>
 <%-include('header')-%>
-<!DOCTYPE html>
-<html>
+    <!DOCTYPE html>
+    <html>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Checkout Form</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css" type="text/css">       
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width,initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>Checkout Form</title>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css"
+            type="text/css">
 
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-white py-4 fixed-top">
-        <div class="container">
-            <a class="navbar-brand d-flex justify-content-between align-items-center order-lg-0" href="/">
-                <span class="text-uppercase fw-lighter ms-2">GOCYCLE</span>
-            </a>
+        <nav class="navbar navbar-expand-lg navbar-light bg-white py-4 fixed-top">
+            <div class="container">
+                <a class="navbar-brand d-flex justify-content-between align-items-center order-lg-0" href="/">
+                    <span class="text-uppercase fw-lighter ms-2">GOCYCLE</span>
+                </a>
 
-            <div class="order-lg-2 nav-btns">
-                <button type="button" class="btn position-relative">
-                    <i class="fa fa-search"></i>
+                <div class="order-lg-2 nav-btns">
+                    <button type="button" class="btn position-relative">
+                        <i class="fa fa-search"></i>
+                    </button>
+
+                </div>
+
+                <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navMenu">
+                    <span class="navbar-toggler-icon"></span>
                 </button>
 
+                <div class="collapse navbar-collapse order-lg-1" id="navMenu">
+                    <ul class="navbar-nav mx-auto text-center">
+                        <li class="nav-item px-2 py-2">
+                            <a class="nav-link text-uppercase text-dark" href="/">home</a>
+                        </li>
+                        <li class="nav-item px-2 py-2">
+                            <a class="nav-link text-uppercase text-dark" href="#collection">collection</a>
+                        </li>
+                        <li class="nav-item px-2 py-2">
+                            <a class="nav-link text-uppercase text-dark" href="#special">specials</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
+        </nav>
+        <!-- end of navbar -->
 
-            <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navMenu">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+        <div class="cart-wrap">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="main-heading mb-10">My wishlist</div>
+                        <div class="table-wishlist">
+                            <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                                <thead>
+                                    <tr>
+                                        <th width="45%">Product Name</th>
 
-            <div class="collapse navbar-collapse order-lg-1" id="navMenu">
-                <ul class="navbar-nav mx-auto text-center">
-                    <li class="nav-item px-2 py-2">
-                        <a class="nav-link text-uppercase text-dark" href="/">home</a>
-                    </li>
-                    <li class="nav-item px-2 py-2">
-                        <a class="nav-link text-uppercase text-dark" href="#collection">collection</a>
-                    </li>
-                    <li class="nav-item px-2 py-2">
-                        <a class="nav-link text-uppercase text-dark" href="#special">specials</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-    <!-- end of navbar -->
-
-<div class="cart-wrap">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="main-heading mb-10">My wishlist</div>
-                <div class="table-wishlist">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <thead>
-                            <tr>
-                                <th width="45%">Product Name</th>
-                                <th width="15%">Unit Price</th>
-                                <th width="15%"></th>
-                                <th width="10%"></th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <%product.forEach((element)=>{%>
-                            <tr>
-                                <td width="45%">
-                                    <div class="display-flex align-center">
-                                        <div class="img-product">
-                                            <img src="/static/product-image/<%=element.product._id%>.jpg" alt="" class="mCS_img_loaded">
-                                        </div>
-                                        <div class="name-product">
-                                            <%=element.product.name%>
-                                        </div>
-                                    </div>
-                                </td>
-                                <td width="15%"><button class="round-black-btn small-btn">View Product</button></td>
-                                <td width="15%"><button class="round-black-btn small-btn">Add to Cart</button></td>
-                                <td width="10%" class="text-center"><a href="#" class="trash-icon"><i class="far fa-trash-alt"></i></a></td>
-                            </tr>
-                            <%})%>   
-                        </tbody>
-                    </table>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <%product.forEach((element)=>{%>
+                                        <tr>
+                                            <td width="45%">
+                                                <div class="display-flex align-center">
+                                                    <div class="img-product">
+                                                        <img src="/static/product-image/<%=element.product._id%>.jpg"
+                                                            alt="" class="mCS_img_loaded">
+                                                    </div>
+                                                    <div class="name-product">
+                                                        <%=element.product.name%>
+                                                    </div>
+                                                </div>
+                                            </td>
+                                            <td width="15%"><a class="round-black-btn small-btn"
+                                                    href="/productDetails/<%=element.product._id%>"
+                                                    style="text-decoration: none;">View Product</a></td>
+                                            <td width="10%" class="text-center"><a href="/wishlist-product/<%=element.product._id%>" class="trash-icon"><i
+                                                        class="far fa-trash-alt"></i></a></td>
+                                        </tr>
+                                        <%})%>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-</div>
 
-<%-include('footer')-%>
+
+
+        <%-include('footer')-%>
